Fix HR and main content alignment

--- a/main.css
+++ b/main.css
@@ -61,10 +61,11 @@ a:hover {
 p {
 	text-align: justify;
 }
-.well a {
+.well a, .lead a {
 	text-decoration: underline;
 	padding: 0;
 }
+
 /* for ease of design only
 .top, .col-md-8, .col-md-4, .col-md-2 {
 	border: 1px solid #000000;
@@ -299,7 +300,7 @@ p {
 
 }
 @media (max-width: 768px) {
-	h1, .lead h2, .lead p  {
+	h1, .lead h2  {
 		text-align: center;
 	}
 	.navbar li {
